--- a/client/stylesheets/gallery.css
+++ b/client/stylesheets/gallery.css
@@ -48,8 +48,12 @@ button {
 }
 
 #lead-photo {
-  width: 200px;
+  width: 300px;
   margin: auto;
   padding: 1em;
   border-radius: 50px;
+}
+
+input[type=text]{
+  font-size: 18px;
 }
